<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/showtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/red"
        android:textSize="50dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/so1"
        android:hint="@string/ed1"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"></EditText>
    <EditText
        android:layout_width="302dp"
        android:hint="@string/ed2"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/so2"></EditText>

    <EditText
        android:id="@+id/pwd"
        android:layout_width="302dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/pwd"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/sum"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20dp"/>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btok"
        android:backgroundTint="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

    <Button
        android:id="@+id/btexit"
        android:layout_width="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_height="wrap_content"
        android:text="@string/exit" />
</LinearLayout>
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:backgroundTint="@color/black"/>

    <Button
        android:id="@+id/ac2"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Activity2"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"/>
</LinearLayout>